etf 조회시 불필요한 dto 작업 제거하는 코드수정 및 프론트에서 불필요한 중복코드 제거. etf 테스트 최신화